[package]
edition = "2021"
name = "kvs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
base64 = "0.13.0"
bincode = "1.3.3"
chrono = "0.4.19"
clap = {version = "3.1.6", features = ["derive"]}
pem = "1.0.2"
rand = "0.8.5"
ripemd = "0.1.1"
rsa = "0.5.0"
serde = {version = "1.0", features = ["derive"]}
sha2 = "0.10.2"
static-dh-ecdh = "0.1.1"
tracing = "0.1"
tracing-subscriber = {version = "0.3.9", features = ["env-filter"]}
mime = "0.3.16"
dirs = "4.0.0"
version = "3.0.0"

[profile.release]
codegen-units = 1 
lto = true 
opt-level = "z" #优化大小。
panic = "abort" 
strip = "debuginfo"
