[package]
categories = ["cli", "store"]
description = "A refreshingly simple data-driven game engine and app framework"
edition = "2021"
keywords = ["key", "value", "cli"]
license = "Apache-2.0"
name = "key_value_service"
repository = "https://github.com/youth95/kvs"
version = "0.1.10"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
base64 = "0.13.0"
bincode = "1.3.3"
chrono = "0.4.19"
clap = {version = "4.0.11", features = ["derive"]}
dirs = "4.0.0"
indicatif = {version = "0.17.1", features = ["rayon"]}
mime = "0.3.16"
pem = "1.0.2"
rand = "0.8.5"
rand_core = {version = "0.5", default-features = false}
rayon = "1.5.1"
ripemd = "0.1.1"
rsa = "0.5.0"
serde = {version = "1.0", features = ["derive"]}
sha2 = "0.10.2"
tracing = "0.1"
tracing-subscriber = {version = "0.3.9", features = ["env-filter"]}
version = "3.0.0"
walkdir = "2.3.2"
x25519-dalek = "1.2.0"
xshell = "0.2.1"
remove_dir_all = "0.7.0"
relative-path = "1.7.0"
thiserror = "1.0.37"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
# strip = "debuginfo"
